# notes_rust_bot

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: db.rs  handlers.rs  main.rs  models.rs  utils.rs
